send beskeder
